--- a/CodeWalletWidgetApp/Base.lproj/Main.storyboard
+++ b/CodeWalletWidgetApp/Base.lproj/Main.storyboard
@@ -345,103 +345,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rxV-pF-qqE">
-                                <rect key="frame" x="0.0" y="64" width="375" height="219"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rxV-pF-qqE">
+                                <rect key="frame" x="0.0" y="64" width="375" height="200"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" red="0.93725490196078431" green="0.93694382905960083" blue="0.95754462480545044" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="selectBarcode:" destination="i4m-Ve-l7b" eventType="touchUpInside" id="Vou-EJ-5UE"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Scan a Code" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h85-uX-1Kh">
-                                <rect key="frame" x="80" y="135" width="215" height="76"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan a Code" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h85-uX-1Kh">
+                                <rect key="frame" x="72.5" y="121.5" width="230" height="85"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="230" id="BTs-jo-2fj"/>
+                                    <constraint firstAttribute="height" constant="85" id="NYZ-fT-Kei"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kvy-ZC-Lx6">
-                                <rect key="frame" x="42" y="416" width="290" height="206"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iPd-5b-yiD">
-                                    <size key="itemSize" width="60" height="60"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LogoCollectionViewCell" id="CkL-Zh-0Dz">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ou3-ez-haA">
-                                <rect key="frame" x="94" y="519" width="187" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Load Suggestions">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="loadLogoSuggestions:" destination="i4m-Ve-l7b" eventType="touchUpInside" id="0xy-Cc-n1n"/>
-                                </connections>
-                            </button>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mDR-g9-xin">
-                                <rect key="frame" x="127" y="436" width="120" height="122"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Associated Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e94-sa-DX3">
-                                <rect key="frame" x="28" y="299" width="134" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Associated Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e94-sa-DX3">
+                                <rect key="frame" x="121" y="291" width="134" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Logo (optional)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfD-BA-sUX">
-                                <rect key="frame" x="28" y="376" width="116" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7e6-Fr-XCU">
-                                <rect key="frame" x="28" y="328" width="225" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7e6-Fr-XCU">
+                                <rect key="frame" x="121" y="320" width="225" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" textContentType="organization"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yv5-a0-zK5">
-                                <rect key="frame" x="137" y="416" width="100" height="100"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yv5-a0-zK5">
+                                <rect key="frame" x="41" y="291" width="60" height="60"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="CU4-h6-T5v"/>
+                                    <constraint firstAttribute="height" constant="60" id="Fzr-pd-3Xa"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="LaunchScreenAppIcon"/>
                                 <connections>
                                     <action selector="pickLocalLogo:" destination="i4m-Ve-l7b" eventType="touchUpInside" id="3dq-sv-CZB"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Weu-08-EwK">
-                                <rect key="frame" x="94" y="426" width="187" height="39"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Pick from Library">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="pickLocalLogo:" destination="i4m-Ve-l7b" eventType="touchUpInside" id="GU1-WT-ryp"/>
-                                </connections>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Logo (optional)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfD-BA-sUX">
+                                <rect key="frame" x="28" y="359" width="86" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cfD-BA-sUX" firstAttribute="top" secondItem="Yv5-a0-zK5" secondAttribute="bottom" constant="8" id="2Jv-yG-gmX"/>
+                            <constraint firstItem="e94-sa-DX3" firstAttribute="top" secondItem="Yv5-a0-zK5" secondAttribute="top" id="Gp6-Kj-jHl"/>
+                            <constraint firstItem="Yv5-a0-zK5" firstAttribute="top" secondItem="rxV-pF-qqE" secondAttribute="bottom" constant="27" id="J4U-hz-lRE"/>
+                            <constraint firstItem="Yv5-a0-zK5" firstAttribute="leading" secondItem="zuK-bV-dFN" secondAttribute="leading" constant="41" id="L6D-xe-TTY"/>
+                            <constraint firstItem="rxV-pF-qqE" firstAttribute="leading" secondItem="zuK-bV-dFN" secondAttribute="leading" id="LHf-Og-5I3"/>
+                            <constraint firstItem="zuK-bV-dFN" firstAttribute="trailing" secondItem="7e6-Fr-XCU" secondAttribute="trailing" constant="29" id="RUR-2W-irk"/>
+                            <constraint firstItem="h85-uX-1Kh" firstAttribute="centerY" secondItem="rxV-pF-qqE" secondAttribute="centerY" id="Uk0-ae-YhH"/>
+                            <constraint firstItem="rxV-pF-qqE" firstAttribute="height" secondItem="4rM-da-sAb" secondAttribute="height" multiplier="0.3" id="aIM-C2-1ee"/>
+                            <constraint firstItem="cfD-BA-sUX" firstAttribute="centerX" secondItem="Yv5-a0-zK5" secondAttribute="centerX" id="gU3-FM-UIC"/>
+                            <constraint firstItem="rxV-pF-qqE" firstAttribute="top" secondItem="zuK-bV-dFN" secondAttribute="top" id="mcp-2R-6Bt"/>
+                            <constraint firstItem="e94-sa-DX3" firstAttribute="leading" secondItem="Yv5-a0-zK5" secondAttribute="trailing" constant="20" id="mtB-7R-QHT"/>
+                            <constraint firstItem="h85-uX-1Kh" firstAttribute="centerX" secondItem="rxV-pF-qqE" secondAttribute="centerX" id="oOE-Je-sE3"/>
+                            <constraint firstItem="e94-sa-DX3" firstAttribute="leading" secondItem="7e6-Fr-XCU" secondAttribute="leading" id="pvh-PN-Vsd"/>
+                            <constraint firstItem="7e6-Fr-XCU" firstAttribute="top" secondItem="e94-sa-DX3" secondAttribute="bottom" constant="8" symbolic="YES" id="qya-TH-jUt"/>
+                            <constraint firstItem="rxV-pF-qqE" firstAttribute="trailing" secondItem="zuK-bV-dFN" secondAttribute="trailing" id="sMO-03-dhI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zuK-bV-dFN"/>
                     </view>
                     <navigationItem key="navigationItem" title="New Code" id="KFP-IA-dDU">
@@ -459,11 +432,8 @@
                     <connections>
                         <outlet property="barcodeButton" destination="rxV-pF-qqE" id="3kC-w4-9gx"/>
                         <outlet property="codeSelectionLabel" destination="h85-uX-1Kh" id="heK-iM-7WW"/>
-                        <outlet property="logoCollectionView" destination="Kvy-ZC-Lx6" id="3Rf-3C-7OB"/>
                         <outlet property="logoImageResultButton" destination="Yv5-a0-zK5" id="2CC-7o-XXg"/>
-                        <outlet property="logoLibraryButton" destination="Weu-08-EwK" id="ddE-QC-lyW"/>
-                        <outlet property="logoOrLabel" destination="mDR-g9-xin" id="grQ-ew-W3I"/>
-                        <outlet property="logoSuggestionsButton" destination="Ou3-ez-haA" id="i7n-U1-aey"/>
+                        <outlet property="logoOptionalLabel" destination="cfD-BA-sUX" id="bvs-JZ-CsA"/>
                         <outlet property="nameTextField" destination="7e6-Fr-XCU" id="YcO-Sb-OkY"/>
                     </connections>
                 </viewController>
@@ -524,6 +494,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="LaunchScreenAppIcon" width="1400" height="1400"/>
         <image name="SettingsIcon" width="75" height="75"/>
     </resources>
 </document>
